# ior2020_uav_L22_AERO

./: ALL_IN_ONE.py  ALL_IN_ONE_C_1.py  ALL_IN_ONE_C_2.py  ALL_IN_ONE_FILTERv2.py  ALL_IN_ONE_FILTERv2_U.py  ALL_IN_ONE_FIX.py  ALL_IN_ONE_FIX2.py  LICENSE  README.md  camer_calib_2020-06-19-10-15-53.bag  distanceChecker.py  fixFisheye.py  install.sh  instruction.md  instruction_with_install_sh.md
ALL_IN_ONE/: ALL_IN_ONE.py
ALL_IN_ONE/old/: ALL_IN_ONE_C_2.py  ALL_IN_ONE_LANDING.py
l22_aero_code/: CMakeLists.txt  package.xml  setup.py
l22_aero_code/launch/: full_task.launch  logger.launch  run.launch  test_task.launch
l22_aero_code/src/: full_task.py  logger.py  plot_csv.py  plot_graph.py  plot_points.py  test_task.py
l22_aero_tools/: cM.pickle  dC.pickle
l22_aero_tools/src/: distanceChecker.py  get_cam_p.py  get_settings.py  play_record.py
l22_aero_vision/: CMakeLists.txt  package.xml  setup.py
l22_aero_vision/launch/: color_reg.launch
l22_aero_vision/msg/: ColorMarker.msg  ColorMarkerArray.msg  ColorRectMarker.msg  ColorRectMarkerArray.msg
l22_aero_vision/src/: L22_AERO_qrCode.py  colorDetecting.py  color_r_c.py  color_ret_circles_d_python2.py  color_ret_d.py  color_ret_d_OLD.py  color_ret_d_python2.py  converter_frame_markers.py  full_task.py  play_record.py  viz.py
l22_aero_vision/src/tools/: tf_tools.py
l22_aero_vision/srv/: SetParameters.srv
to_Gitbook/: Intro.md  L22_AERO.md  OpenCV.md  QR.md  ROS.md  main_code.md
